<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_menu_home">首页</string>
    <string name="home_menu_car_circle">车友圈</string>
    <string name="home_menu_select_car">选车</string>
    <string name="home_menu_used_car">二手车</string>
    <string name="home_menu_mime">我的</string>
    <string name="home_focus_on">关注</string>
    <string name="home_recommend">推荐</string>
    <string name="home_short_video">小视频</string>
    <string name="home_live">直播</string>
    <string name="home_active_rider">活跃车友%s</string>
    <string name="home_certified_car_owner">认证车主%s</string>
    <string name="home_app_name">首页模块</string>
</resources>